Fixed legal update popup overlap.

--- a/scss/_legal.scss
+++ b/scss/_legal.scss
@@ -16,10 +16,13 @@
   }
 }
 
+#wpautoterms-top-fixed-container {
+  margin-top: 50px;
+}
+
 .wpautoterms-update-notice {
   font-size: 0.7em;
   border-bottom: 1px solid $tt-sand-transp;
-  margin-top: 50px;
   padding: 15px 10px;
   text-align: center;
   background-color: $tt-dark-theme-bg-transp;
